# slurmigo

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml  slurmigo.toml.example
.github/workflows/: test.yml
src/slurmigo/: __init__.py  act.py  cli.py  decide.py  display.py  sense.py  store.py
tests/: test_decide.py  test_parsers.py  test_store.py
tests/integration/: test_scenarios.py
