[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slurmigo"
version = "0.1.1"
description = "A job manager for Slurm with a live terminal dashboard"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Haining Pan", email = "hnpan@terpmail.umd.edu"},
]
readme = "README.md"
dependencies = [
    "rich",
    "tomli; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/hainingpan/slurmigo"
Repository = "https://github.com/hainingpan/slurmigo"
Issues = "https://github.com/hainingpan/slurmigo/issues"

[project.scripts]
slurmigo = "slurmigo.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests requiring real Slurm (deselect with '-m not integration')",
]
